<resources>
    <string name="app_name">LinkDevTask</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_website">OPEN WEBSITE</string>
    <string name="explore">Explore</string>
    <string name="live_chat">Live Chat</string>
    <string name="gallery">Gallery</string>
    <string name="wish_list">Wish List</string>
    <string name="e_magazine">E-Magazine</string>
    <string name="welcome">Welcome</string>
    <string name="tony_roshdy">Tony Roshdy</string>
    <string name="search">search</string>
    <string name="something_went_wrong_error_msg">Something went wrong!</string>
</resources>